<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_populares"
            android:icon="@drawable/ic_popular"
            android:title="@string/menu_populares" />
        <item
            android:id="@+id/nav_recientes"
            android:icon="@drawable/ic_reciente"
            android:title="@string/menu_recientes" />
        <item
            android:id="@+id/nav_vender"
            android:icon="@drawable/ic_vender"
            android:title="@string/menu_vender"/>
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_usuario"
            android:title="@string/menu_perfil"/>
    </group>
</menu>